<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/desired_league_bg"
    tools:context="com.magdales.swoosh.LeagueScreen">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:src="@drawable/swoosh_logo" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/skill_as"
        android:textColor="@color/fontColor"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/skill_button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:gravity="center"
            android:text="@string/skill_1"
            android:textAllCaps="false"
            android:textColor="@color/fontColor"
            android:textSize="16sp" />

        <Button
            android:id="@+id/skill_button_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:gravity="center"
            android:text="@string/skill_2"
            android:textAllCaps="false"
            android:textColor="@color/fontColor"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/finishButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:alpha="0.50"
        android:background="@drawable/button_border"
        android:text="@string/finish_button"
        android:textAllCaps="true"
        android:textColor="@color/fontColor" />

</RelativeLayout>
